
repositories repos

java {
    // Sets Java compatibility to Java 8
    sourceCompatibility JavaVersion.VERSION_11
    targetCompatibility JavaVersion.VERSION_11

    withJavadocJar()
    withSourcesJar()
}

compileJava {
    doFirst {
        // https://stackoverflow.com/questions/58708213/gradle-build-add-module-path
        options.compilerArgs += [
                '--add-opens', 'java.smartcardio'
        ]
    }
}


compileTestJava {
    doFirst {
        // https://stackoverflow.com/questions/58708213/gradle-build-add-module-path
        options.compilerArgs += [
                '--add-opens', 'java.smartcardio'
        ]
    }
}

dependencies {
    api project(":utilities:websocket-messages-java-lib")

    api "org.java-websocket:Java-WebSocket:${javaWebSocketVersion}"
    api "com.squareup.okhttp3:okhttp:${okHttp3Version}"
    api ("org.slf4j:slf4j-api") {
        version {
            strictly "${slf4jVersion}"
        }
    }

    api "io.github.jnasmartcardio:jnasmartcardio:${jnasmartcardioVersion}"

    api project(":utilities:websocket-client-java-lib")
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
    testImplementation "org.slf4j:slf4j-simple:$slf4jVersion"
}

tasks.named('test') {
    useJUnitPlatform()
}
